Stable Nearby Search
New version, Tokyo and New York enabled lol

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -28,7 +28,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:id="@+id/streetview"
-            android:onClick="getStreet"/>
+            android:onClick="getStreet"
+            android:visibility="invisible"/>
 
     </LinearLayout>
 
